GNOME Bugzilla – Bug 676168
tsdemux: Playback of ts files containing ts packets with adaptation field only and payload start indicator = 1
Last modified: 2012-05-18 08:21:12 UTC
Created attachment 214181 [details] [review] don't flush on pusi when no payload is contained in ts. Currently the tsdemuxer assumes that whenever the payload unit start indicator is set on a ts packet it is indicating a new PES packet. Actually this is not true. A new PES is only signalled if the packet contains PES payload. The attached problem changes the demuxer to handle this correctly and fixes the mentioned streams. A stream sample to reproduce the issue can be found here: http://www.jusst.de/files/cablecom-radio.ts This is captured from a Cablecom IPTV Broadcast in switzerland.
commit 23bf0b823c454a526b8612ee50c8f2c34bc3c15b Author: Julian Scheel <julian@jusst.de> Date: Wed May 16 16:15:58 2012 +0200 tsdemux: flush on pusi only for payload packets Data should not be flushed out of the tsdemux because a payload unit start indicator (pusi) is seen in a adaptation only ts packet. If the package contains no payload a pusi does not indicate a new PES packet, but PSI information, etc. This fixes playback of several TS files which contain ts packets without payload but with pusi set to 1. https://bugzilla.gnome.org/show_bug.cgi?id=676168